# Elevator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Elevator.cpp  Elevator.h  ElevatorUser.cpp  ElevatorUser.h  IElevator.h  Program.cpp  README.md  elevator.puml  pch.h  templates.puml
UML/: elevator-classes.puml
